# Urzas-Quest-TextRPG

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  cbattle.cpp  cbattle.h  cgamemanagement.cpp  cgamemanagement.h  cgameprogression.cpp  cgameprogression.h  cinventory.cpp  cinventory.h  cmap.cpp  cmap.h  cmenu.cpp  cmenu.h  colorconsole.cpp  colorconsole.h  colorize.cpp  colorize.h  console.cpp  console.h  cplayer.cpp  cplayer.h  globals.h  main.cpp  moduleregister.h  modulesregister.h  randomizer.cpp  randomizer.h  ressources.cpp  ressources.h
.github/workflows/: cmake-multi-platform.yml
companion/: cattackercompanion.cpp  cattackercompanion.h  ccompanion.cpp  ccompanion.h  cdefendercompanion.h  chealercompanion.cpp  cscarymonstercompanion.cpp  cscarymonstercompanion.h
core/: cbattle.cpp  cgamemanagement.cpp  cgamemanagement.h  cgameprogression.cpp  cgameprogression.h  cgamestateobject.cpp  cgamestateobject.h  cgamestatetagnames.h  cinventory.cpp  cinventory.h  cmap.cpp  cmap.h  cmenu.cpp  cmenu.h  colorize.cpp  colorize.h  console.cpp  console.h  core.cmake  cplayer.cpp  cplayer.h  csavefile.cpp  csavefile.h  defaultsettings.h  enumiterator.h  exceptions.h  jsontagnames.h  localdirectory.cpp  localdirectory.h  randomizer.cpp  randomizer.h
core/companion/: cattackercompanion.cpp  cattackercompanion.h  ccompanion.cpp  ccompanion.h  cdefendercompanion.cpp  cdefendercompanion.h  chealercompanion.cpp  chealercompanion.h  companionfactory.cpp  companionfactory.h  cscarymonstercompanion.cpp  cscarymonstercompanion.h  csupportcompanion.cpp  csupportcompanion.h
core/dungeons/: cdungeon.cpp  cdungeonmap.cpp
core/encounters/: cbattleencounter.cpp  cbattleencounter.h  cdeadhero.cpp  cdeadhero.h  cencounter.cpp  cencounter.h  cequipmentdealer.cpp  cequipmentdealer.h  cmysteriouschest.cpp  cmysteriouschest.h
core/enemies/: cbountyenemy.cpp  cenemy.cpp  cenemy.h  cenemyhorde.cpp  cenemyhorde.h  clivingchest.cpp  cmobenemy.cpp  cmobenemy.h  ctwoenemies.cpp
core/gamestate/: cgamesettings.cpp  cgamesettings.h  cgamestateobject.cpp  cgamestateobject.h
core/items/: cbomb.cpp  cbomb.h  chealingpotion.cpp  chealingpotion.h  cheartcontainer.cpp  cheartcontainer.h  cinventory.cpp  cinventory.h  citem.cpp  citem.h  citemfactory.cpp  citemfactory.h  cjunkitem.cpp  cjunkitem.h  cphoenixfeather.cpp  cphoenixfeather.h  csandwich.cpp  csandwich.h
core/menu/: cmenu.cpp  cmenu.h  cmenuaction.cpp  cmenuaction.h  menuaction.h
core/module/: moduleinfo.h
core/ressources/: core.json  jsontagnames.h
core/rooms/: ccapital.cpp  ccapital.h  cfield.cpp  cfield.h  cinjuredpet.cpp  cinjuredpet.h  croom.cpp  croom.h  cshrineoftheancients.cpp  cshrineoftheancients.h  cstartingroom.cpp  cstartingroom.h  roomfactory.cpp  roomfactory.h
core/save/: csavefile.cpp  csavefile.h  exceptions.h  jsontagnames.h  localdirectory.cpp  localdirectory.h
core/tasks/: cbountyhunt.cpp  cbountyhunt.h  ctask.cpp  ctask.h  taskfactory.cpp  taskfactory.h
core/translator/: ctranslatable.cpp  ctranslatable.h  ctranslationfile.cpp  ctranslationfile.h  ctranslator.cpp  ctranslator.h  translatorexceptions.h
core/utils/: cgamesettings.cpp  cgamesettings.h  clog.cpp  clog.h  console.cpp  console.h  csavefile.cpp  csavefile.h  enumiterator.h  exceptions.h  localdirectory.cpp  localdirectory.h
dungeons/: cdungeon.cpp  cdungeon.h  cdungeonmap.cpp  cdungeonmap.h
dungeons/rooms/: cdungeonmaproom.cpp  cdungeonmaproom.h  cdungeonroom.cpp  cdungeonroom.h  cdungeonroomnoroom.cpp  cdungeonroomnoroom.h  chealingwell.cpp  chealingwell.h
encounters/: cbattleencounter.cpp  cbattleencounter.h  cdeadhero.cpp  cdeadhero.h  cencounter.cpp  cencounter.h  cequipmentdealer.cpp  cequipmentdealer.h  cmysteriouschest.cpp  cmysteriouschest.h  encounterregister.h
enemies/: cbountyenemy.cpp  cbountyenemy.h  cenemy.cpp  cenemy.h  cenemyhorde.cpp  clivingchest.h  cmobenemy.cpp  ctwoenemies.h
items/: cbomb.cpp  cbomb.h  cheartcontainer.cpp  citem.cpp  citem.h  citemfactory.cpp  citemfactory.h  cjunkitem.cpp  cjunkitem.h  cphoenixfeather.cpp  csandwich.cpp  csandwich.h  itemfactory.cpp  itemfactory.h
items/equipment/: carmor.cpp  carmor.h  cequipment.cpp  cequipment.h  cjunkarmor.cpp  cjunkarmor.h  cjunkshield.cpp  cjunkshield.h  cjunksword.cpp  cjunksword.h  cshield.cpp  cshield.h  csword.cpp  csword.h  cweapon.cpp  cweapon.h
items/story/: claylasribbon.cpp  cshaggyssandwich.cpp  cshaggyssandwich.h  curzasglasses.h
modules/: moduleinfo.h  modules.cmake
modules/bard/: cdancingbard.cpp  cdancingbard.h  module.cmake  moduleressources.cpp  moduleressources.h
modules/blackivorytower/: cblackivorytower.cpp  cblackivorytower.h  cdarkmobi.cpp  cdarkmobi.h  clunatic.cpp  clunatic.h  module.cmake  moduleressources.cpp  moduleressources.h
modules/cave/: ccave.cpp  ccave.h  ccavebattleencounter.cpp  ccavebattleencounter.h  ccaveboss.cpp  ccaveboss.h  ccavebosstask.cpp  ccavebosstask.h  ccavedungeon.cpp  ccavedungeon.h  ccavedungeonmap.cpp  ccavedungeonmap.h  copencaveencounter.cpp  copencaveencounter.h  copencavetask.cpp  copencavetask.h  cshaggyssandwich.cpp  module.cmake  moduleressources.cpp  moduleressources.h
modules/fishingvillage/: ccollectpartsencounter.cpp  ccollectpartsencounter.h  cfishingvillage.cpp  cfishingvillage.h  module.cmake  moduleressources.cpp  moduleressources.h
modules/forest/: curzasglasses.cpp
modules/lakeoftears/: clakeoftearsboss.cpp  clakeoftearsboss.h  clakeoftearsbosstask.cpp  clakeoftearsbosstask.h  clakeoftearsencounter.cpp  clakeoftearsencounter.h  clakeoftearstask.cpp  clakeoftearstask.h  module.cmake  moduleressources.cpp  moduleressources.h
modules/layla/: claylaboss.cpp  claylaboss.h  claylaencounter.cpp  claylaencounter.h  claylatask.cpp  claylatask.h  claylatowntask.cpp  claylatowntask.h  (+2 more)
ressources/: settings.json
rooms/: ccapital.cpp  cfield.cpp  cfield.h  cinjuredpet.cpp  cinjuredpet.h  croom.cpp  croom.h  cshrineoftheancients.cpp  cshrineoftheancients.h  cstartingroom.cpp  cstartingroom.h  roomfactory.cpp  roomfactory.h
tasks/: cbountyhunt.cpp  ctask.cpp  ctask.h
(+189 files in other folders)
